<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/callBackgroundColor"
    android:orientation="vertical"
    tools:context=".CallActivity">

    <LinearLayout
        android:id="@+id/incoming_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/incoming_info_firstrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pp_user"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="match_parent"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:text="@string/call_top_hint"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/incoming_info_caller_name"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/incoming_info_caller_name_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Alberto Pitti"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/incoming_info_caller_number"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/incoming_info_caller_number_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="+39347127365"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/incoming_caller_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_caller_image"
            app:civ_border_width="0dp"
            app:civ_border_color="#bbdca3"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/call_timer_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/call_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/call_ended"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="33"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/call_close"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@drawable/call_end" />
            <TextView
                android:id="@+id/call_close_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="Close(10)"/>

            <ImageButton
                android:id="@+id/cancel_record"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_cancel_record_red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/cancel_record_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/call_record_cancel"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/send_message_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/call_sendmessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_rounded_bkgnd_call_msg_e_rec"
                android:src="@drawable/ic_call_message_black"
                android:gravity="center"
                android:layout_marginVertical="2dp"/>

            <ImageButton
                android:id="@+id/call_sendrecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:background="@drawable/rect_rounded_bkgnd_call_msg_e_rec"
                android:gravity="center"
                android:src="@drawable/ic_call_record_black" />


            <TextView
                android:id="@+id/call_sendmessage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/call_send_message"
                android:gravity="center_horizontal"/>


            <ImageButton
                android:id="@+id/send_record"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_send_record_green"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/send_record_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="Send (30)"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="33">

            <ImageButton
                android:id="@+id/call_recall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/call_accept" />
            <TextView
                android:id="@+id/call_recall_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/call_recall"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>